docx4j-export-fo: exclude xml-apis:xml-apis (split javax.xml package broke the module path)
batik-dom pulls xml-apis 1.4.01, whose javax.xml / org.w3c.dom / org.xml.sax
packages duplicate the JDK's, so a consumer's --add-modules ALL-MODULE-PATH
failed with a ResolutionException (identical in 17.0.4).  Excluded on
batik-bridge and fop; not needed on Java 11+.  Resolution parity for
docx4j-export-fo still identical (50 third-party artifacts); the consumer
PDF on the unfiltered module path now renders, with word geometry
identical to the classpath run.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01X5GpYdwigELiETnUnwTu5S